--- a/pkg/msquic/Makefile.dep
+++ b/pkg/msquic/Makefile.dep
@@ -6,6 +6,7 @@ USEMODULE += auto_init_gnrc_netif
 USEMODULE += gnrc_ipv6_default
 USEMODULE += gnrc_netdev_default
 USEMODULE += sock_udp
+USEMODULE += sock_dns
 USEMODULE += posix_inet
 USEMODULE += posix_sockets
-
+USEMODULE += pthread
